파일명 변경

--- a/bookcase/JVM-밑바닥까지-파헤치기/12장-자바-메모리-모델과-스레드.md
+++ b/bookcase/JVM-밑바닥까지-파헤치기/12장-자바-메모리-모델과-스레드.md
@@ -204,18 +204,18 @@ volatile 변수의 특성
 - 주요 스케줄링 방법
   - 협력적 스케줄링
     > - 스레드 실행 시간을 스레드 스스로가 제어함  
-    >   => 일을 마친 스레드는 다른 스레드로 전환되도록 시스템에 적극적으로 알려야 함
+       => 일을 마친 스레드는 다른 스레드로 전환되도록 시스템에 적극적으로 알려야 함
     > - 협력적 스케줄링 모델의 이점 :  
     >   - 구현하기 쉬움
     >   - 일반적으로 동기화 문제가 일어나지 않음  
-    >     => 스레드가 다른 스레드로 전환되기 전 자신이 완수해야 하는 일을 알고 있기 때문 (e. g. 루아의 코루틴)
+         => 스레드가 다른 스레드로 전환되기 전 자신이 완수해야 하는 일을 알고 있기 때문 (e. g. 루아의 코루틴)
     > - 협력적 스케줄링 모델의 단점 :  
     >   - 스레드 실행 시간을 제어할 수 없음  
           => 스레드 코드에 문제가 있어서 다른 스레드로 전환하게끔 시스템에 요청하지 않으면 프로그램이 멈추게됨
   - 선점형 스케줄링
     > - 각 스레드의 실행 시간을 시스템이 할당하며 스레드는 전환 시점을 스스로 결정하지 못함
     > - 자바는 선점형 스케줄링을 이용  
-    >   => 작업 관리자를 이용해 시스템 충돌 없이 해당 프로세스만 종료할 수 있음
+       => 작업 관리자를 이용해 시스템 충돌 없이 해당 프로세스만 종료할 수 있음
 - 자바 스레드의 스케줄링은 시스템이 자동으로 수행하지만, 특정 스레드에 더 많거나 적은 실행 시간을 할당하도록 운영 체제에 '권고' 할 수 있다.
   - 스레드에 우선순위를 설정(총 10단계), 시스템은 실행 준비를 마친 스레드 중 우선순위가 높은 스레드를 선택해 실행할 가능성이 높음  
     => 하지만 결국 결정하는 주체는 운영 체제
@@ -272,8 +272,7 @@ volatile 변수의 특성
     > - 스레드 A -> 시스템 인터럽트 -> 스레드 B
     > - 스레드 A에서 B로 전환할때 A의 문맥 데이터를 보관한 뒤  
         레지스터와 메모리 페이징 등을 B가 이전에 일시 정지된 시점과 똑같게 복원해야함
-- 멀티스레딩을 운영 체제 차원에서 지원하기 시작하면서 애플리케이셔
-  - 
+- 멀티스레딩을 운영 체제 차원에서 지원하기 시작하면서 애플리케이션
 
 #### 가상 스레드: 자바의 해법
 
