13장 스레드 안전성과 락 최적화 (4)

--- a/bookcase/JVM-밑바닥까지-파헤치기/13장-스레드-안전성과-락-최적화.md
+++ b/bookcase/JVM-밑바닥까지-파헤치기/13장-스레드-안전성과-락-최적화.md
@@ -211,4 +211,50 @@ public String concatString(String s1, String s2, String s3) {
 
 ### 13.3.4 경량 락
 
+- JDK 6때 추가된 동기화 메커니즘으로 운영 체제의 뮤텍스로 구현한 기존 락보다 가볍다는 뜻이다.
+- 경량 락의 목적은 스레드 경합을 없애 뮤텍스를 사용하는 기존 락의 성능 저하를 줄이는 것
+
+두 부분으로 나뉘는 핫스팟 가상 머신의 객체 헤더
+- 첫 번째 부분:
+  - 해시 코드와 GC 세대 나이 등 객체 자신의 런타임 데이터를 저장  
+    => length 항목 경우 32비트 가상 머신은 32비트, 64비트 가상 머신은 64비트를 차지함 
+  - 이를 '마크 워드'라고 하며 경량 락과 편향 락 구현의 핵심
+- 두 번째 부분:
+  - 메서드 영역의 데이터 타입 데이터를 가리키는 포인터를 저장(배열 객체는 배열 길이를 저장하는 항목이 추가)
+
+락 상태별 활용 형태
+
+<img width="506" alt="image" src="https://github.com/user-attachments/assets/c62c3cf2-c00c-4362-bc27-df60ae263d21">
+
+경략 락 동작 방식
+```markdown
+- 코드가 동기화 블록에 진입하려 할 때 락 객체가 잠겨 있지 않다면(락 플래그 '01') 가상 머신은 현재 스레드의 스택 프레임에 락 레코드를 생성
+- 그런 다음 가상 머신은 CAS 연산으로 락 객체의 마크 워드를 락 레코드를 가리키는 포인터로 바꿈  
+  => 변경에 성공하면 현재 스레드가 락을 얻었음을 뜻함
+- 마크 워드의 락 플래그는 '00'으로 변경되어 객체가 경략 락 상태에 있음을 표시
+- 둘 이상의 스레드가 같은 락을 두고 경합하는 상황이면 경량 락은 더이상 유효하지 않음  
+  => 락 플래그 값을 '10'으로 수정해 중량 락(뮤텍스)으로 확장해야 함
+```
+
+경략 락은 경합이 없다면 뮤텍스 대신 CAS 연산으로 끝난다. 하지만 경합이 있는 경우에는 뮤텍스 부하에 더해 CAS 연산 부하까지 떠안게 되어 전통적인 중량 락보다 오히려 느려진다.  
 ### 13.3.5 편향 락
+
+- 경합이 없을 때 데이터의 동기화 장치들을 제거하여 프로그램 실행 성능을 높이는 최적화 기법
+- 경량 락은 CAS 연산을 사용해 뮤텍스 사용을 피했지만 편향 락은 CAS 연산조차 쓰지 않게 하여 전체 동기화를 없앰
+- '편향'은 락을 마지막으로 썼던 스레드가 락을 '찜'해 둔다는 의미
+  - 다음 번 실행 시까지 다른 스레드가 락을 가져가지 않으면 직전에 사용한 스레드는 다시 동기화할 필요가 없음
+
+편향 락 동작 방식
+```markdown
+- 스레드가 락 객체를 처음 획득하면 가상 머신이 객체 헤더의 락 플래그를 '01'로, 편향 모드를 '1'로 설정  
+  => 편향 모드로 진입했다는 뜻
+- 락을 얻은 스레드의 아이디를 마크 워드에 기록  
+  => 이때 CAS 연산을 사용
+- CAS 연산이 성공하면 편향 락을 소유한 스레드는 동기화 작업 없이 해당 동기화 블록에 진입할 수 있음
+- 다른 스레드가 락을 얻으려 시도하는 즉시 편향 모드가 종료
+  - 락 객체가 현재 잠긴 상태인지에 따라 편향을 해제할지 여부를 정함
+  - 해제될 시 락 플래그는 돌아갈 상태에 따라 잠겨 있지 않음('01') 또는 경략 락('00') 상태로 돌아감
+  - 후속 동기화 작업은 경량 락 방식으로 수행
+```
+
+편향 락은 동기화는 하고 있지만 실질적인 경합이 없는 프로그램의 성능을 높일 수 있다. 하지만 프로그램의 락 대부분을 여러 스레드가 경쟁적으로 얻으려 시도하면 오히려 불필요한 작업을 더 해야 한다.  
